# gh-stars

./: Cargo.toml  README.md  dist-workspace.toml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
src/: main.rs
