[package]
name = "gh-stars"
version = "0.1.0"
edition = "2024"
description = "A CLI tool to fetch, cache, and search GitHub stars with vector search"
readme = "README.md"
license = "MIT"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.36", features = ["derive"] }
dirs = "6.0.0"
fastembed = "4.7.0"
gh-token = "0.1.8"
indicatif = "0.17.11"
reqwest = { version = "0.12.15", features = ["json"] }
rusqlite = { version = "0.34.0", features = ["bundled", "blob", "array"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlite-vec = "0.1.6"
tokio = { version = "1.44.2", features = ["full"] }
